--- a/package.json
+++ b/package.json
@@ -4,37 +4,40 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "build:ios": "eas build -p ios --profile development",
     "build:android": "eas build -p android --profile development"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "2.2.0",
     "expo": "~54.0.0",
-    "expo-router": "~5.1.0",
-    "react": "19.0.0",
-    "react-native": "0.79.2",
-    "react-dom": "19.0.0",
-    "react-native-web": "~0.20.0",
-    "expo-blur": "~14.1.0",
-    "expo-haptics": "~14.1.0",
+    "expo-av": "~16.0.8",
+    "expo-blur": "~15.0.8",
+    "expo-constants": "~18.0.13",
+    "expo-haptics": "~15.0.8",
+    "expo-linear-gradient": "~15.0.8",
+    "expo-linking": "~8.0.11",
+    "expo-router": "~6.0.23",
+    "expo-speech": "~14.0.8",
     "expo-sqlite": "~16.0.0",
-    "@react-native-async-storage/async-storage": "2.1.2",
-    "react-native-reanimated": "~3.17.0",
-    "react-native-gesture-handler": "~2.24.0",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0",
-    "expo-status-bar": "~2.2.0",
-    "expo-linear-gradient": "~14.0.0",
-    "expo-av": "~15.0.2",
-    "expo-speech": "~13.0.1",
+    "expo-status-bar": "~3.0.9",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
     "react-native-audio-api": "^0.7.1",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-web": "^0.21.0",
+    "react-native-worklets": "0.5.1",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.0",
-    "typescript": "~5.3.0"
+    "typescript": "~5.9.2"
   },
   "private": true
 }
