--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.0",
+    "@types/react": "^19.2.14",
     "typescript": "~5.9.2"
   },
   "private": true
